# ccbot

./: .env.example  README.md  README_CN.md  pyproject.toml
src/ccbot/: __init__.py  bot.py  config.py  hook.py  main.py  runtimes.py  session.py  session_monitor.py  session_register.py  terminal_parser.py  tmux_manager.py  transcript_parser.py  utils.py
src/ccbot/handlers/: callback_data.py  interactive_ui.py  status_polling.py
tests/ccbot/: test_bot_codex_prompt.py  test_config.py  test_forward_command.py  test_hook.py  test_main.py  test_session.py  test_session_monitor.py  test_session_register.py  test_terminal_parser.py  test_transcript_parser.py
tests/ccbot/handlers/: test_interactive_ui.py  test_status_polling.py
